# web_backend

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose-gpu.yml  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.github/workflows/: build.yml  docstring.yml  lint.yml
configs/: 3dac_sql_join.sql  ani-default_community_sample.json  ani-default_sample.json  community.py  community_en.py  community_zh.py  diamond.py  docker.py  fnn-default_community_sample.json  i18n_messages.json  kq-default_sample.json  local.py  online.py
configs/community_character_samples/: ani-default.json  fnn-default.json  ht-default.json  kq-default.json
configs/community_character_samples_en/: ani-default.json  furina-default.json  hutao-default.json  keqing-default.json  klee-default.json  nahida-default.json
configs/community_character_samples_zh/: ani-default.json  fnn-default.json  ht-default.json  kl-default.json  kq-default.json  nxd-default.json
configs/diamond_character_samples/: ani-default.json  fnn-default.json  ht-default.json  kq-default.json
configs/diamond_character_samples_zh/: ani-default.json  fnn-default.json  ht-default.json  kl-default.json  kq-default.json  nxd-default.json
dlp3d_web_backend/apis/: builder.py  motion_file_api_v1.py
dlp3d_web_backend/cache/: builder.py  local_cache.py
dlp3d_web_backend/data_structures/: __init__.py  character_config.py  motion_clip.py  motion_file_v1.ptoto  motion_record.py  restpose.py  user_config.py  user_credential.py
dlp3d_web_backend/data_structures/annotations/: __init__.py  loopable.py  motion_keyword.py  random.py  speech_keyword.py
dlp3d_web_backend/io/file/: builder.py  (+3 more)
dlp3d_web_backend/service/: exceptions.py  providers.py  requests.py  responses.py  server.py
dlp3d_web_backend/utils/: config.py  hash.py  i18n.py  io.py  log.py  super.py
docs/: README_CN.md  configuration.md  docker.md  install.md
docs/en/: api_docmentation.md  configuration.md  data_preparation.md  development.md  docker.md  install.md  overview.md
docs/zh-cn/: api_docmentation.md  configuration.md  data_preparation.md  development.md  docker.md  index.md  install.md  overview.md
templates/: log_template.html
tools/: update_default_characters.py
workflows/: docstring.yml
(+10 files in other folders)
